--- a/app/module/monitor/element/view/list.html
+++ b/app/module/monitor/element/view/list.html
@@ -10,6 +10,7 @@
 <link rel="import" href="../../../../css/global-layout.html">
 <link rel="import" href="../../../../css/global-styles.html">
 <link rel="import" href="../../../../element/pagination/pagination.html">
+<link rel="import" href="../../../../element/storage/storage-adapter-pagination-resource-behaviour.html">
 
 
 <dom-module id="monitor-view-list">
@@ -17,32 +18,32 @@
     <style include="global-layout"></style>
     <style include="global-style"></style>
     <slot name="header"></slot>
-    <div hidden$="{{!hasResources}}" style="padding-top: 20px;">
-      <template is="dom-repeat" items="[[monitors]]" as="monitor">
+    <div hidden$="{{!totalItems}}" style="padding-top: 20px;">
+      <template is="dom-repeat" items="[[resources]]" as="monitor">
         <monitor-wc
                 monitor="{{monitor}}"
-                on-wrap-update="displayUpdateView"
-                on-wrap-remove="remove"
-                on-wrap-change-enable-monitor="changeEnableMonior">
+                on-remove="_removeResource"
+                on-update-view="displayUpdateView"
+                on-change-enable="changeEnableMonior">
         </monitor-wc>
       </template>
       <application-pagination page="{{page}}" total-item="{{totalItems}}" item-per-page="{{itemPerPage}}"></application-pagination>
     </div>
-    <div hidden$="{{hasResources}}">Non sono presenti monitor virtuali</div>
+    <div hidden$="{{totalItems}}">Non sono presenti monitor virtuali</div>
   </template>
 
   <script>
-      class ElementMonitorViewList extends Polymer.Element {
+      class ElementMonitorViewList extends StorageAdapterPaginationResourceBehaviour {
 
           static get is() { return 'monitor-view-list'; }
 
           static get properties() {
               return {
 
-                  monitors: {
-                      type: Array,
+                  resourceSelected: {
+                      type: Object,
                       notify: true,
-                      value: []
+                      value: {}
                   },
 
                   selected: {
@@ -50,88 +51,18 @@
                       notify: true
                   },
 
-                  monitorSelected: {
-                      type: Object,
-                      notify: true
-                  },
+                  storageName: {
+                      type: String,
+                      readOnly: true,
+                      value: MonitorConfig.NAME_SERVICE
 
-                  page : {
-                      type: Number,
-                      value :1
-                  },
-
-                  itemPerPage : {
-                      type: Number,
-                      value :20
-                  },
-
-                  totalItems : {
-                      type: Number,
                   }
               };
           }
 
           ready() {
               super.ready();
-
-              serviceManager.get('StoragePluginManager')
-                  .get(MonitorConfig.NAME_SERVICE)
-                  .eventManager.on(dsign.storage.Storage.STORAGE_POST_SAVE, this._loadResource.bind(this)
-              );
-
-              serviceManager.get('StoragePluginManager')
-                  .get(MonitorConfig.NAME_SERVICE)
-                  .eventManager.on(dsign.storage.Storage.STORAGE_POST_UPDATE, this._loadResource.bind(this)
-              );
-          }
-
-          static get observers() {
-              return [
-                  '_queryMonitors(page, itemPerPage)'
-              ]
-          }
-
-          _queryMonitors(page, itemPerPage) {
-              if (page === undefined || itemPerPage === undefined) {
-                  return;
-              }
-              this._loadResource();
-          }
-
-          _loadResource() {
-              serviceManager.get('StoragePluginManager')
-                  .get(MonitorConfig.NAME_SERVICE)
-                  .getPaged(this.page, this.itemPerPage)
-                  .then((data) =>  {
-                      this.set('monitors', data);
-                      this.hasResources = data.length > 0;
-                      this.totalItems = data.totalItems;
-                  });
-          }
-
-          /**
-           * @param evt
-           */
-          remove(evt) {
-
-              let index = null;
-              this.monitors.find((element, ind) => {
-                  if ( element.id === evt.detail.id) {
-                      index = ind;
-                      return element;
-                  }
-              });
-
-              this.splice('monitors', index, 1);
-              this.hasResources = this.monitors.length > 0;
-
-              serviceManager.get('StoragePluginManager')
-                  .get(MonitorConfig.NAME_SERVICE)
-                  .remove(evt.detail)
-                  .then((data) =>  {
-                      this.set('playlists', data)
-                      serviceManager.get('PaperToastNotification').notify('Remove monitor')
-                  });
+              this.addStorageListener(dsign.storage.Storage.STORAGE_POST_SAVE, this.getResources.bind(this))
           }
 
           /**
@@ -139,17 +70,16 @@
            */
           changeEnableMonior(evt) {
 
-              for (let cont = 0; this.monitors.length > cont; cont++) {
-                  this.monitors[cont].enable = 0
+              for (let cont = 0; this.resources.length > cont; cont++) {
+                  this.resources[cont].enable = 0
               }
 
-              let monitorStorage = serviceManager.get('StoragePluginManager').get(MonitorConfig.NAME_SERVICE);
-              monitorStorage.getAll({enable: 1})
+              this.storage.getAll({enable: 1})
                   .then((enableMonitors) => {
                       for (let cont = 0; enableMonitors.length > cont; cont++) {
 
-                          enableMonitors[cont].enable = 0;
-                          monitorStorage.update(enableMonitors[cont])
+                          enableMonitors[cont].enable = false;
+                          this.storage.update(enableMonitors[cont])
                               .then((data) => {})
                               .catch((err) => {
                                       console.log(err)
@@ -157,11 +87,10 @@
                               );
                       }
 
-                      evt.detail.enable = 1;
-                      monitorStorage.update(evt.detail)
+                      evt.detail.enable = true;
+                      this.storage.update(evt.detail)
                           .then((data) => {
                               serviceManager.get('PaperToastNotification').notify(' Enable ' + evt.detail.name);
-                              PluginMonitorIndex.electronIpc.send('change-monitors-configuration', evt.detail);
                           })
                           .catch((err) => {
                                   console.log(err)
@@ -172,7 +101,7 @@
           }
 
           displayUpdateView(evt) {
-              this.monitorSelected = evt.detail;
+              this.resourceSelected = evt.detail;
               this.selected = 2;
           }
       }
