--- a/app/element/layout/application-layout.html
+++ b/app/element/layout/application-layout.html
@@ -142,7 +142,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                        type: String,
                        reflectToAttribute: true,
                        observer: '_pageChanged',
-                       value: 'playlist-index'
+                       value: 'monitor-index'
                    },
 
                    nameApplication: {
