--- a/app/module/timeline/element/view/list.html
+++ b/app/module/timeline/element/view/list.html
@@ -20,23 +20,60 @@
             :host ::slotted(.header) {
                 margin-bottom: 16px;
             }
-        </style>
 
+            @media (max-width: 600px) {
+                timeline-wc {
+                    flex-basis: 100%;
+                }
+            }
+
+            @media (min-width: 601px) and (max-width: 900px) {
+                timeline-wc {
+                    flex-basis: 50%;
+                }
+            }
+
+            @media (min-width: 901px) and (max-width: 1200px) {
+                timeline-wc {
+                    flex-basis: 33.3%;
+                }
+            }
+
+            @media (min-width: 1201px) and (max-width: 1500px) {
+                timeline-wc {
+                    flex-basis: 25%;
+                }
+            }
+
+            @media (min-width: 1501px) and (max-width: 1919px) {
+                timeline-wc {
+                    flex-basis: 20%;
+                }
+            }
+
+            @media (min-width: 1920px) {
+                timeline-wc {
+                    flex-basis: 16.6%;
+                }
+            }
+        </style>
         <slot name="header"></slot>
         <div hidden$="{{!totalItems}}">
-            <template is="dom-repeat" items="[[resources]]" as="timeline">
-                <timeline-wc
-                        timeline="{{timeline}}"
-                        on-update-view="displayUpdateView"
-                        on-remove="_removeResource"
-                        on-change-rotation="updateResource"
-                        on-change-context="updateResource"
-                        on-play="play"
-                        on-resume="resume"
-                        on-stop="stop"
-                        on-pause="pause">
-                </timeline-wc>
-            </template>
+            <div class="flex flex-wrap">
+                <template is="dom-repeat" items="[[resources]]" as="timeline">
+                    <timeline-wc
+                            timeline="{{timeline}}"
+                            on-update-view="displayUpdateView"
+                            on-remove="_removeResource"
+                            on-change-rotation="updateResource"
+                            on-change-context="updateResource"
+                            on-play="play"
+                            on-resume="resume"
+                            on-stop="stop"
+                            on-pause="pause">
+                    </timeline-wc>
+                </template>
+            </div>
             <application-pagination page="{{page}}" total-item="{{totalItems}}" item-per-page="{{itemPerPage}}"></application-pagination>
         </div>
         <div hidden$="{{totalItems}}">
