--- a/app/module/playlist/element/view/upsert.html
+++ b/app/module/playlist/element/view/upsert.html
@@ -198,6 +198,7 @@
                         serviceManager.get('PaperToastNotification').notify(method.charAt(0).toUpperCase() + method.slice(1) + ' playlist');
                         if (method === 'save') {
                             this.resource = new Playlist();
+                            this._clearData();
                         }
                     })
                     .catch((err) => {
